fix: added forgotten vertical-align

--- a/assets/css/voting-area.scss
+++ b/assets/css/voting-area.scss
@@ -40,6 +40,7 @@
     display: inline-block;
     width: 1.5rem;
     height: 1.5rem;
+    vertical-align: top;
   }
 
   .vote-up {
